# Universidad

./: 2  README.md
Matriculas/QE_Seguimiento/: 202402.md
Matriculas/QE_Seguimiento2/: Talleres.aux  Talleres.tex
OverView/: main.py  materias.db  registro.py
OverView/202402/: data.csv
Semestre_10/LabIntermedio/: nota.py
Semestre_10/LabIntermedio/Tareas/Tarea2/code/: Makefile  data_6_1.csv  punto_2_1.py  punto_3_2.py  punto_4_1.py  punto_4_4.py  punto_6_1.py  pyproject.toml
Semestre_10/PropuestaMonografia/: Plantilla_PropuestaMonografia_Ceticas.aux  Plantilla_PropuestaMonografia_Ceticas.out  Plantilla_PropuestaMonografia_Ceticas.tex  Plantilla_PropuestaMonografia_eticas.docx
Semestre_10/PropuestaProyecto/: Makefile  Plantilla_PropuestaMonografia_Ceticas.aux  Plantilla_PropuestaMonografia_Ceticas.bcf  Plantilla_PropuestaMonografia_Ceticas.blg  Plantilla_PropuestaMonografia_Ceticas.out  Plantilla_PropuestaMonografia_Ceticas.run.xml  Plantilla_PropuestaMonografia_Ceticas.tex
Semestre_10/TeoricoComputacional/FirstIteration/: Makefile  TODO  bc_main.py  catalog_screen.py  diagnose.py  launch.py  main.py  pyproject.toml  requirements.txt  results.csv  results_symmetric.csv  results_transformed.csv  run  table_selector_viewer_screen.py  vizier_ja+a587a65.ipynb
Semestre_10/TeoricoComputacional/FirstIteration/.ipynb_checkpoints/: main-checkpoint.py  results_transformed-checkpoint.csv  vizier_ja+a587a65-checkpoint.ipynb
Semestre_10/TeoricoComputacional/FirstIteration/methods/: base_method.py  particula_peaks_method.py  simple_method.py  symmetry_method.py
Semestre_10/TeoricoComputacional/FirstIteration/screens/: catalog_screen.py  parameter_selector_screen.py  table_selector_viewer_screen.py  type_process.py
Semestre_10/TeoricoComputacional/Results/: lineas_hierro.csv  pyproject.toml  resultados_ew_lineas_hierro.csv  results_absorption.csv  resumen_ew.csv
Semestre_10/TeoricoComputacional/Results/.ipynb_checkpoints/: lineas_hierro-checkpoint.csv  process-nir-checkpoint.ipynb  process-vir-checkpoint.ipynb  resultados_ew_lineas_hierro-checkpoint.csv  results-checkpoint.csv  resumen_ew-checkpoint.csv
Semestre_11/P_Exp/PrimeraEntrega/: .env  Untitled.ipynb  extract.py  main.py  process.py  pyproject.toml
Semestre_4/Cosmos/: Ensayo_Final.aux  Ensayo_Final.fdb_latexmk  Ensayo_Final.fls  Ensayo_Final.tex
Semestre_4/Ingles_10/: Cornell Note-Taking Grid.docx  Cornell Note-Taking Grid_5.docx
Semestre_6/Apuntes/: template.aux  (+4 more)
(+1169 files in other folders)
