[project]
name = "firstiteration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "customtkinter>=5.2.2",
    "ipyaladin>=0.6.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.5",
    "mocpy>=0.18.0",
    "pandas>=2.3.3",
    "pyvo>=1.7",
    "tabulate>=0.9.0",
    "tk>=0.1.0",
]
