[project]
name = "results"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "ipyaladin>=0.7.0",
    "matplotlib>=3.10.8",
    "mocpy>=0.19.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyvo>=1.8",
    "scipy>=1.16.3",
]
