[project]
name = "primeraentrega"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "selenium>=4.41.0",
    "sympy>=1.14.0",
]
