[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "matplotlib>=3.10.6",
    "mypy>=1.17.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
]
